Updated so that if a device data is not set then the latest one will be loaded from the DB